Some deprecation warnings in the POS tagger
There are dozens, perhaps hundreds, of similer changes that will be
needed to build warning-less with current Java, but this is a start.